appId: "com.recipedia"
---

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 20
    timeout: 60000
    centerElement: true
    label: "Scroll to ingredients section"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Add ingredient"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::${INDEX}::QuantityInput"
    direction: UP
    speed: 20
    centerElement: true
    label: "Scroll up to ingredient input"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeIngredients::${INDEX}::QuantityInput"
    label: "Focus on ingredient quantity"

- runFlow:
    file: "../../inputAndNext.yaml"
    env:
      TARGET_ID: "RecipeIngredients::${INDEX}::QuantityInput"
      VALUE: "${QUANTITY}"
    label: "Enter ingredient quantity"

- runFlow:
    file: "../../inputAndCommitText.yaml"
    env:
      TARGET_ID: "RecipeIngredients::${INDEX}::NameInput::CustomTextInput"
      VALUE: "${NAME}"
      DISMISS_ID: "RecipeIngredients::${INDEX}::Unit"
    label: "Enter ingredient name"

- runFlow:
    file: "../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to dismiss"
