appId: "com.recipedia"
---

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to preparation section"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    label: "Add preparation step"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::${INDEX}::TextInputContent::CustomTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to preparation step input"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::EditableStep::${INDEX}::TextInputContent::CustomTextInput"
    label: "Focus on preparation step content"

- runFlow:
    file: "../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- inputText:
    text: "${TEXT}"
    label: "Enter preparation step"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation to end"

- tapOn:
    id: "RecipePreparation::EditableStep::${INDEX}::Content"
    label: "Tap on preparation content to close the keyboard"

- assertVisible:
    id: "RecipePreparation::EditableStep::${INDEX}::TextInputContent::CustomTextInput"
    text: "${TEXT}"
    label: "Check that preparation content is well edited"

- runFlow:
    file: "../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to dismiss"
