appId: "com.recipedia"
---
- tapOn:
    id: "RecipeImage::RoundButton"
    label: "Press add image button"

- runFlow:
    file: "../../../../asserts/modal/en/CameraModalNoImages.yaml"
    label: "Check camera modal is displayed"

- runFlow:
    file: "../ocr/pickImageSource.yaml"
    label: "Select image source (platform-specific)"

- runFlow:
    file: "../ocr/android/takePhoto.yaml"
    when:
      platform: Android
    label: "Take photo on Android"
- runFlow:
    file: "../ocr/iOS/selectFromGallery.yaml"
    when:
      platform: iOS
    label: "Select most recent photo from gallery on iOS"

- assertVisible:
    id: "Modal::List#0::SquareButton::Image"
    label: "Check that the most recent photo is displayed in the modal"

- tapOn:
    id: "Modal::List#0::SquareButton::Image"
    label: "Select camera picture"

- runFlow:
    file: "../ocr/validateWithoutCropping.yaml"
    label: "Validate without cropping (platform-specific)"


- extendedWaitUntil:
    visible:
      id: "RecipeImage::Image"
    timeout: 120000
    label: "Wait for picked image to commit to the form"
