appId: "com.recipedia"
---
- tapOn:
    id: "RecipeImage::RoundButton"
    label: "Tap on camera button of recipe image"
- runFlow:
    file: ../../../../asserts/modal/fr/CameraModalNoImages.yaml
    label: "Check camera modal is displayed in French"

- runFlow:
    file: ../ocr/pickImageSource.yaml
    label: "Select image source (platform-specific)"

- runFlow:
    file: ../ocr/android/takePhoto.yaml
    when:
      platform: Android
    label: "Take photo on Android"
- runFlow:
    file: ../ocr/iOS/selectFromGallery.yaml
    when:
      platform: iOS
    label: "Select most recent photo from gallery on iOS"

- tapOn:
    id: "Modal::List#0::SquareButton::Image"
    label: "Select camera picture"

- runFlow:
    file: ../ocr/validateWithoutCropping.yaml
    label: "Validate without cropping (platform-specific)"

- extendedWaitUntil:
    visible:
      id: "RecipeImage::Image"
    timeout: 45000
    label: "Wait for picked image to commit to the form"
